Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -39,7 +39,8 @@
 <h3>
 <a id="screenshots" class="anchor" href="#screenshots" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Screenshots</h3>
 
-<p>TODO</p>
+<p>TODO: more screenshots?
+<img src="/images/screenshots/breakpoints.png" alt="Breakpoints"></p>
 
 <h3>
 <a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Authors and Contributors</h3>
