--- a/index.html
+++ b/index.html
@@ -1,30 +1,7 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <meta charset='utf-8'>
-    <meta http-equiv="X-UA-Compatible" content="chrome=1">
-
-    <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen">
-    <link rel="stylesheet" type="text/css" href="stylesheets/github-dark.css" media="screen">
-    <link rel="stylesheet" type="text/css" href="stylesheets/print.css" media="print">
-
-    <title>GNUSim8085 by GNUSim8085</title>
-  </head>
-
-  <body>
-
-    <header>
-      <div class="container">
-        <h1>GNUSim8085</h1>
-        <h2>A graphical simulator, assembler and debugger for the Intel 8085 microprocessor</h2>
-
-        <section id="downloads">
-          <a href="https://github.com/GNUSim8085" class="btn btn-github"><span class="icon"></span>View on GitHub</a>
-        </section>
-      </div>
-    </header>
-
-    <div class="container">
+---
+layout: default
+title: GNUSim8085
+---
       <section id="main_content">
         <h3>
 <a id="introduction" class="anchor" href="#introduction" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Introduction</h3>
@@ -52,8 +29,3 @@
 
 <p>TODO</p>
       </section>
-    </div>
-
-    
-  </body>
-</html>
