Click on the screenshot on index page to go to screenshots page

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ title: GNUSim8085
 <h3>
 <a id="screenshots" class="anchor" href="#screenshots" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Screenshots</h3>
 
-<img src="/images/screenshots/breakpoints.png" alt="Breakpoints"></p>
+<a href="/screenshots"><img src="/images/screenshots/breakpoints.png" alt="Breakpoints"></a>
 
 <h3>
 <a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Authors and Contributors</h3>
